force-app/main/default/objects/custom_create49__c/custom_create49__c.object-meta.xml
<CustomObject>
    <label>Custom created object49</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects49</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>