force-app/main/default/objects/custom_create49__c/fields/custom_create_49field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_49field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 49field525</label>
    <type>Checkbox</type>
</CustomField>